--- a/index.html
+++ b/index.html
@@ -1,14 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Information Form</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <form enctype="multipart/form-data" action="index.html" method="get">
-        <!-- FORM FIELDS HERE -->
+        <fieldset>
+            <legend>Personal Information</legend>
+
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" minlength="12">
+
+
+            <label for="dob">Date of Birth:</label>
+            <input type="date" id="dob" name="dob" required>
+        </fieldset>
+
+        <fieldset>
+            <legend>Preferences</legend>
+
+            <label for="color">Favorite Color:</label>
+            <input type="color" id="color" name="color" class="w-100">
+
+            <label for="hobby">Hobby:</label>
+            <input list="hobbies" id="hobby" name="hobby" class="w-fit">
+            <datalist id="hobbies">
+                <option value="Drawing">
+                <option value="Swimming">
+                <option value="Dancing">
+            </datalist>
+
+            <label for="experience">Experience Level:</label>
+            <input type="range" id="experience" name="experience" min="0" max="10" class="w-fit">
+
+        </fieldset>
+
+        <fieldset>
+            <legend>Contact Preferences</legend>
+
+            <label for="contactMethod">Preferred Contact Method:</label>
+            <select id="contactMethod" name="contactMethod">
+                <option value="email">Email</option>
+                <option value="phone">Phone</option>
+                <option value="mail">Mail</option>
+            </select>
+
+            <label for="newsletter">Subscribe to Newsletter:</label>
+            <input type="checkbox" id="newsletter" name="newsletter" value="yes" class="w-fit">
+        </fieldset>
+
+        <fieldset>
+            <legend>Preferences</legend>
+
+            <label for="gender">Gender:</label>
+            <div>
+                <input type="radio" id="male" name="gender" value="male" class="w-fit">
+                <label for="male">Male</label>
+            </div>
+            <div>
+                <input type="radio" id="female" name="gender" value="female" class="w-fit">
+                <label for="female">Female</label>
+            </div>
+            <div>
+                <input type="radio" id="other" name="gender" value="other" class="w-fit">
+                <label for="other">Other</label>
+            </div>
+
+        </fieldset>
+
+        <fieldset>
+            <legend>More Information</legend>
+
+            <label for="bio">Bio:</label>
+            <textarea id="bio" name="bio" rows="4" cols="50"></textarea>
+        </fieldset>
+
+        <fieldset>
+            <legend>Upload Documents</legend>
+
+            <label for="resume">Resume and other certificates:</label>
+            <input type="file" id="resume" name="resume" accept=".doc,.docx,.pdf,.jpg,.png" multiple>
+        </fieldset>
+
+        <fieldset>
+            <legend>Submission</legend>
+
+            <div>
+                <button type="reset" class="btn-blue">Reset</button>
+                <button type="submit" class="btn-blue">Submit</button>
+            </div>
+        </fieldset>
+
     </form>
 </body>
+
 </html>
